Fixed bug #46106 (Memory leaks when using global statement)